Fix spacing of albums.

--- a/style.scss
+++ b/style.scss
@@ -238,6 +238,8 @@ input[type="search"]::-webkit-search-results-decoration {
 }
 
 .album-container {
+  display: flex;
+  flex-flow: row wrap;
   margin: 12px 0 0 0;
 }
 
@@ -277,7 +279,7 @@ input[type="search"]::-webkit-search-results-decoration {
 
 .album {
   display: inline-block;
-  margin: 0 24px 22px 0;
+  margin: 0 24px 24px 0;
   position: relative;
 }
 
